--- a/index2.css
+++ b/index2.css
@@ -1,4 +1,16 @@
-h1 {
+body {
+    background-color: antiquewhite;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    text-align: justify;
+    position: relative;
+    left: 650px;
+}
+/* set media query for screen size & text */
+h2 {
     text-decoration: underline;
     text-align: center;
     color: rgb(13, 11, 7);
@@ -37,4 +49,8 @@ p2 {
     outline-color: black;
     outline-offset: 1cap;
     outline-style: outset;
-    }   
+    }
+#page-2Button {
+    position: relative;
+    left: 1100px;
+}
